--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@heroui/tooltip": "^2.2.22",
     "next": "15.5.2",
+    "prism-react-renderer": "^2.4.1",
     "react": "19.1.0",
+    "react-code-block": "^1.1.3",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "typed.js": "^2.1.0"
